k8s/filebrowser/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: filebrowser
  labels:
    name: filebrowser
