k8s/filebrowser/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
  labels:
    app: filebrowser
    kubernetes.io/name: "filebrowser"
spec:
  type: NodePort
  ports:
    - name: filebrowser
      port: 8080
      targetPort: 80
      nodePort: 30020
  selector:
    app: filebrowser
